--- a/mockup/dev/components/navigation.html
+++ b/mockup/dev/components/navigation.html
@@ -4,7 +4,7 @@
         <div class="flex justify-between items-center h-20">
             <!-- Logo -->
             <a href="#" onclick="navigateTo('home')" class="flex-shrink-0 flex items-center gap-2">
-                <img src="../assets/images/konderntang-no-border.png" alt="KonDernTang Logo" class="h-12 w-auto object-contain">
+                <img src="assets/images/konderntang-no-border.png" alt="KonDernTang Logo" class="h-16 w-auto object-contain">
             </a>
 
             <!-- Desktop Menu -->
