--- a/mockup/dev/components/navigation.html
+++ b/mockup/dev/components/navigation.html
@@ -3,7 +3,7 @@
     <div class="container mx-auto px-4">
         <div class="flex justify-between items-center h-20">
             <!-- Logo -->
-            <a href="#" onclick="navigateTo('home')" class="flex-shrink-0 flex items-center gap-2">
+            <a href="index.html" onclick="navigateTo('home'); return false;" class="flex-shrink-0 flex items-center gap-2">
                 <img src="assets/images/konderntang-no-border.png" alt="KonDernTang Logo" class="h-16 w-auto object-contain">
             </a>
 
