--- a/wp-content/themes/trendtoday/assets/css/custom.css
+++ b/wp-content/themes/trendtoday/assets/css/custom.css
@@ -422,6 +422,22 @@ button:focus-visible {
     transform: translateX(2px);
 }
 
+/* Footer Copyright Menu - separator between items */
+.footer-copyright-menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.footer-copyright-menu li {
+    display: inline-flex;
+}
+.footer-copyright-menu li:not(:last-child)::after {
+    content: '|';
+    margin-left: 1rem;
+    margin-right: 0.5rem;
+    color: #d1d5db;
+}
+
 /* Footer Social Icons */
 .footer-social-icon {
     position: relative;
